--- a/client/src/App.css
+++ b/client/src/App.css
@@ -40,3 +40,15 @@
 button {
   font-size: calc(10px + 2vmin);
 }
+
+.iconlogo {
+  color: white;
+  font-size: 2.5rem;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.iconfooter {
+  color: white;
+  font-size: 1.5rem;
+  font-family: Arial, Helvetica, sans-serif;
+}
